@@ -150,11 +150,11 @@ latex_font_size = '11pt'
 # Grouping the document tree into LaTeX files. List of tuples
 # (source start file, target name, title, author, document class [howto/manual]).
 
-latex_documents = [ ('index', 'IPython.tex', 'IPython Documentation',
+latex_documents = [ ('index', 'ipython.tex', 'IPython Documentation',
                      ur"""Brian Granger, Fernando Pérez and Ville Vainio\\
                      \ \\
                      With contributions from:\\
-                     Benjamin Ragan-Kelley.""",
+                     Benjamin Ragan-Kelley and Barry Wark.""",
                      'manual'),
                     ]
 
